--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Angular Boilerplate</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <link rel="stylesheet" href="prod/styles/components.css"> --> <!-- uncomment if used -->
-        <link rel="stylesheet" href="prod/styles/styles.css">
+        <!-- <link rel="stylesheet" href="dist/styles/components.css"> --> <!-- uncomment if used -->
+        <link rel="stylesheet" href="dist/styles/styles.css">
         <!--[if lt IE 9]>
             <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js"></script>
         <![endif]-->
@@ -17,7 +17,7 @@
 
         <section ui-view></section>
 
-		<script src="prod/scripts/components.js"></script>
-        <script src="prod/scripts/app.js"></script>
+		<script src="dist/scripts/components.js"></script>
+        <script src="dist/scripts/app.js"></script>
     </body>
 </html>
