--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html ng-app="todo-app" ng-strict-di>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Angular Boilerplate</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <link rel="stylesheet" href="dist/styles/components.css"> --> <!-- uncomment if used -->
-        <link rel="stylesheet" href="dist/styles/styles.css">
-        <!--[if lt IE 9]>
-            <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js"></script>
-        <![endif]-->
-        <base href="/" />
-    </head>
-    <body>
-
-        <section ui-view></section>
-
+<html ng-app="app" ng-strict-di>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Angular Boilerplate</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <link rel="stylesheet" href="dist/styles/components.css"> --> <!-- uncomment if used -->
+    <link rel="stylesheet" href="dist/styles/styles.css">
+    <!--[if lt IE 9]>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js"></script>
+    <![endif]-->
+    <base href="/" />
+  </head>
+  <body>
+    <section ui-view></section>
 		<script src="dist/scripts/components.js"></script>
-        <script src="dist/scripts/app.js"></script>
-    </body>
+    <script src="dist/scripts/app.js"></script>
+  </body>
 </html>
